--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+@import "./styles/fonts/fonts.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    @apply font-jamsil font-thin;
+  }
+}
